css fille nadded

--- a/fruit.html
+++ b/fruit.html
@@ -154,15 +154,7 @@
             document.getElementById('mangoCount').innerText = mango;
         }
         )
-        // let countFruits = 0;
-        // let totalCount = 0;
-
-        // function count(e){
-        //     let ids = e.target.id;
-        //     countFruits++;
-        //     totalCount++;
-        //     document.getElementById().innerText = countFruits;
-        // }
+     //dfrgjhjhgfddetrhkjngdredythjngfdtdyhjkvdtrgnj
     </script>
 </body>
 
